@@ -6556,7 +6556,7 @@ get_devices(cupsd_client_t *con)	/* I - Client connection */
            "%d+%d+%d+%d+%s%s%s%s%s",
            con->request->request.op.request_id,
            limit ? limit->values[0].integer : 0,
-	   timeout ? timeout->values[0].integer : 10,
+	   timeout ? timeout->values[0].integer : 15,
 	   (int)User,
 	   requested_str,
 	   exclude_str[0] ? "%20" : "", exclude_str,
