@@ -16,7 +16,8 @@ CHANGES IN CUPS V1.4.1
 	- Boolean options did not show up as selected in the web interface
 	  (STR #3303)
       	- The scheduler did not cache or report driver information files
-	  correctly, leading to a variety of issues (STR #3297, STR #3305)
+	  correctly, leading to a variety of issues (STR #3283, STR #3297,
+	  STR #3305)
 	- cupsDoIORequest() did not abort on permanent errors (STR #3311)
 	- Modifying a class in the web interface did not work (STR #3312)
 	- BrowseLocalProtocols could be cleared when changing the sharing
@@ -29,6 +30,8 @@ CHANGES IN CUPS V1.4.1
 	  implementations (STR #3262)
 	- The scheduler leaked three file descriptors to each job filter
 	  (STR #3263)
+	- The scheduler now uses a default CUPS-Get-Devices timeout of 15
+	  seconds (STR #3307)
 
 
 CHANGES IN CUPS V1.4.0
